# mcts-chess

./: .dockerignore  Dockerfile  pyproject.toml
mcts_chess/: __init__.py  training_orchestrator.py
mcts_chess/api/: app.py
mcts_chess/evaluation/: arena.py
mcts_chess/games/: __init__.py  base.py  connect4.py  go.py  gomoku.py  othello.py
mcts_chess/mcts/: engine.py
mcts_chess/network/: model.py  training.py
mcts_chess/selfplay/: buffer.py  pipeline.py
mcts_chess/visualization/: dashboard.py
